--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   <link rel="stylesheet" href="styles/general.css"> 
   <link rel="stylesheet" href="styles/profile.css"> 
+  <script src="scripts/profile.js" type="text/javascript"></script>
 </head>
 <body>
   <header>
@@ -42,8 +43,8 @@
         
         </div>
     
-        <div class="profile-info" >
-          <p>
+        <div class="profile-info" id="profile-info">
+          <!-- <p>
             <strong>Name:</strong> John
           </p>
 
@@ -53,19 +54,19 @@
 
           <p>
             <strong>Email:</strong> john.newman@gmail.com
-          </p>
+          </p> -->
         </div>
       </div>
     <div class="buttons">
-      <button class="button">Reset password</button>
-      <button class="button">Reset email</button>
+      <button class="button" id="reset-password">Reset password</button>
+      <button class="button" id="reset-email">Reset email</button>
     </div>
    
   </main>
 
 <footer>
   <div class="footer-left">Made by: Inese Krole</div>
-  <div class="footer-right">2022</div>
+  <div class="footer-right">2022/2023</div>
 </footer>
 
 </body>
