changed home.html to index.html, to publish in Git pages

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
   </header>
   <main>
     <!-- <section class="login"> -->
-      <form action="home.html" method="post" onsubmit="return loginValidation()" id="login" class="login">
+      <form action="index.html" method="post" onsubmit="return loginValidation()" id="login" class="login">
         
         <label for="email">Email</label>
         <input id="email" name="email" type="email" placeholder="name@example.com">
@@ -33,7 +33,7 @@
     <!-- </section> -->
 
     <!-- <section class="register" id="register"> -->
-      <form action="home.html" method="post" onsubmit="return registerValidation()" class="register" id="register">
+      <form action="index.html" method="post" onsubmit="return registerValidation()" class="register" id="register">
      
         <label for="nameReg">Name</label>
         <input id="nameReg" name="nameReg" minlength="2" type="text" placeholder="name" required>
