--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
   </header>
 
   <nav>
-    <a href="home.html" style="text-decoration:none; color:#ffffff">
+    <a href="index.html" style="text-decoration:none; color:#ffffff">
       Home
     </a>
 
