changed file name back to home.html

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 
   <nav>
 
-    <a href="index.html" style="text-decoration:none; color:#ffffff">
+    <a href="home.html" style="text-decoration:none; color:#ffffff">
       Home
     </a>
 
