--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   <link rel="stylesheet" href="styles/general.css"> 
   <link rel="stylesheet" href="styles/profile.css"> 
-  <script src="scripts/profile.js" type="text/javascript"></script>
+  <script src="scripts/profile.js" type="text/javascript" defer></script>
 </head>
 <body>
   <header>
@@ -27,6 +27,11 @@
     <a href="profile.html" style="text-decoration:none; color:#ffffff">
       Profile
     </a>
+
+    <a href="login.html" id="logout" style="text-decoration:none; color:#ffffff">
+      Log out
+    </a>
+    
     
   </nav>
 
