--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles/general.css"> 
   <link rel="stylesheet" href="styles/home.css"> 
 
-  <script src="scripts/home.js" type="text/javascript"></script>
+  <script src="scripts/home.js" type="text/javascript" defer></script>
   
 </head>
 <body>
@@ -30,12 +30,17 @@
     <a href="profile.html" style="text-decoration:none; color:#ffffff">
       Profile
     </a>
+
+    
+    <a href="login.html" id="logout" style="text-decoration:none; color:#ffffff">
+      Log out
+    </a>
     
   </nav>
 
   <main>
   
-      <table id="table">
+      <table id="table" class="table">
         <caption>Available Movies</caption>
         <!-- <div class="row" > -->
         <thead>
@@ -84,7 +89,7 @@
   
       </table>
 
-      <table id="yourTable">
+      <!-- <table id="yourTable">
         <caption>Your Movies</caption>
         <thead>
           <tr class="row">
@@ -96,7 +101,7 @@
           </tr>
         </thead>
         <tbody id="yourBody"></tbody>  
-
+      </table> -->
 
   </main>
   
