--- a/yourMovies.html
+++ b/yourMovies.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="styles/general.css"> 
   <link rel="stylesheet" href="styles/movies.css">
 
-  <!-- <script src="scripts/home.js" type="text/javascript"></script> -->
+  <script src="scripts/yourMovies.js" type="text/javascript" defer></script>
+  <script src="scripts/home.js" type="text/javascript" defer></script>
 
 </head>
 <body>
@@ -30,6 +31,11 @@
     <a href="profile.html" style="text-decoration:none; color:#ffffff">
       Profile
     </a>
+
+    <a href="login.html" id="logout" style="text-decoration:none; color:#ffffff">
+      Log out
+    </a>
+    
 
   </nav>
 
